if (${SCXT_USE_FLAC})
    set(BUILD_PROGRAMS OFF CACHE BOOL "Build and install programs" FORCE)
    set(BUILD_EXAMPLES OFF CACHE BOOL "Build and install examples" FORCE)
    set(BUILD_TESTING OFF CACHE BOOL "Build tests" FORCE)
    set(BUILD_DOCS OFF CACHE BOOL "Build and install doxygen documents" FORCE)
    set(WITH_FORTIFY_SOURCE OFF CACHE BOOL "Enable protection against buffer overflows" FORCE)
    set(WITH_STACK_PROTECTOR OFF CACHE BOOL "Enable GNU GCC stack smash protection" FORCE)
    set(INSTALL_MANPAGES OFF CACHE BOOL "Install MAN pages" FORCE)
    set(INSTALL_PKGCONFIG_MODULES OFF CACHE BOOL "Install PkgConfig modules" FORCE)
    set(INSTALL_CMAKE_CONFIG_MODULE OFF CACHE BOOL "Install CMake package-config module" FORCE)
    set(WITH_OGG OFF CACHE BOOL "ogg support (default: test for libogg)" FORCE)
    set(WITH_AVX OFF CACHE BOOL "scxt is sse4.2 not ACXX" FORCE)

    add_subdirectory(flac)
    target_compile_definitions(FLAC++ PUBLIC SCXT_USE_FLAC=1)
else ()
    add_library(FLAC INTERFACE)
    add_library(FLAC++ INTERFACE)
endif ()